@@ -81,3 +81,5 @@ Fixes/Patches incorporated from:
 	Tomasz Prus
 	Johnny Luong
 	Jason McClellen
+	james@thoughtpatterns.com
+	Tim Bunce
