@@ -27,7 +27,37 @@ class sqlitecursor : public sqlrcursor_svr {
 	private:
 				sqlitecursor(sqlrconnection_svr *conn);
 				~sqlitecursor();
+#ifdef HAVE_SQLITE3_BIND_INT
+		bool		prepareQuery(const char *query,
+						uint32_t length);
+#endif
 		bool		supportsNativeBinds();
+
+#ifdef HAVE_SQLITE3_BIND_INT
+		bool		inputBindString(const char *variable, 
+						uint16_t variablesize,
+						const char *value, 
+						uint16_t valuesize,
+						int16_t *isnull);
+		bool		inputBindInteger(const char *variable, 
+						uint16_t variablesize,
+						int64_t *value);
+		bool		inputBindDouble(const char *variable, 
+						uint16_t variablesize,
+						double *value,
+						uint32_t precision,
+						uint32_t scale);
+		bool		inputBindBlob(const char *variable, 
+						uint16_t variablesize,
+						const char *value, 
+						uint32_t valuesize,
+						int16_t *isnull);
+		bool		inputBindClob(const char *variable, 
+						uint16_t variablesize,
+						const char *value, 
+						uint32_t valuesize,
+						int16_t *isnull);
+#endif
 		bool		executeQuery(const char *query,
 						uint32_t length,
 						bool execute);
@@ -54,6 +84,9 @@ class sqlitecursor : public sqlrcursor_svr {
 		int		ncolumn;
 		int		rowindex;
 		bool		lastinsertrowid;
+
+#ifdef HAVE_SQLITE3_BIND_INT
+#endif
 
 		regularexpression	selectlastinsertrowid;
 
