@@ -18,6 +18,7 @@ void checkSuccess(const char *value, const char *success) {
 			printf("success ");
 			return;
 		} else {
+printf("%s!=%s\n",value,success);
 			printf("failure ");
 			delete cur;
 			delete con;
@@ -28,6 +29,7 @@ void checkSuccess(const char *value, const char *success) {
 	if (!strcmp(value,success)) {
 		printf("success ");
 	} else {
+printf("%s!=%s\n",value,success);
 		printf("failure ");
 		delete cur;
 		delete con;
@@ -40,6 +42,7 @@ void checkSuccess(int value, int success) {
 	if (value==success) {
 		printf("success ");
 	} else {
+printf("%d!=%d\n",value,success);
 		printf("failure ");
 		delete cur;
 		delete con;
@@ -52,6 +55,7 @@ void checkSuccess(double value, double success) {
 	if (value==success) {
 		printf("success ");
 	} else {
+printf("%f!=%f\n",value,success);
 		printf("failure ");
 		delete cur;
 		delete con;
@@ -324,10 +328,10 @@ int	main(int argc, char **argv) {
 	checkSuccess(cur->getColumnType("testdatetime"),"DATETIME");
 	checkSuccess(cur->getColumnType(10),"SMALLDATETIME");
 	checkSuccess(cur->getColumnType("testsmalldatetime"),"SMALLDATETIME");
-	checkSuccess(cur->getColumnType(11),"CHAR");
-	checkSuccess(cur->getColumnType("testchar"),"CHAR");
-	checkSuccess(cur->getColumnType(12),"CHAR");
-	checkSuccess(cur->getColumnType("testvarchar"),"CHAR");
+	checkSuccess(cur->getColumnType(11),"LONGCHAR");
+	checkSuccess(cur->getColumnType("testchar"),"LONGCHAR");
+	checkSuccess(cur->getColumnType(12),"LONGCHAR");
+	checkSuccess(cur->getColumnType("testvarchar"),"LONGCHAR");
 	checkSuccess(cur->getColumnType(13),"BIT");
 	checkSuccess(cur->getColumnType("testbit"),"BIT");
 	printf("\n");
@@ -355,10 +359,10 @@ int	main(int argc, char **argv) {
 	checkSuccess(cur->getColumnLength("testdatetime"),8);
 	checkSuccess(cur->getColumnLength(10),4);
 	checkSuccess(cur->getColumnLength("testsmalldatetime"),4);
-	checkSuccess(cur->getColumnLength(11),40);
-	checkSuccess(cur->getColumnLength("testchar"),40);
-	checkSuccess(cur->getColumnLength(12),40);
-	checkSuccess(cur->getColumnLength("testvarchar"),40);
+	checkSuccess(cur->getColumnLength(11),80);
+	checkSuccess(cur->getColumnLength("testchar"),80);
+	checkSuccess(cur->getColumnLength(12),80);
+	checkSuccess(cur->getColumnLength("testvarchar"),80);
 	checkSuccess(cur->getColumnLength(13),1);
 	checkSuccess(cur->getColumnLength("testbit"),1);
 	printf("\n");
